Fixed project tech images being too big. Fixed header content superimposing on the header animation.

--- a/src/css/AboutMeSection.module.css
+++ b/src/css/AboutMeSection.module.css
@@ -26,6 +26,7 @@
 }
 .aboutme__profile--img{
     object-fit: contain;
+    height: 250px;
 }
 /* Responsive */
 @media (max-width: 900px) {
@@ -42,7 +43,10 @@
         width: 150px;
         grid-area: 1 / 1 / 2 / 3;
         justify-self: center;
-        margin: 0;
+        margin: 0 0 1rem 0;
+    }
+    .aboutme__profile--img{
+        height: 150px;
     }
     .aboutme__info--container{
         grid-area: 3 / 1 / 4 / 4;
