--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ html{
 body{
     background-color:var(--color-darkblue-bg);
     font-size: 1rem;
-    background-image: url('./assets/gplay.png');
+    background-image: url('./assets/backgrounds/gplay.png');
     font-family: "Space Grotesk";
 }
 body, h1, h2, h3, p, ul, ol, input, textarea, button {
